# codewars-katas-rs

./: Cargo.toml
benches/: codewars_bench.rs
src/: int_partitions.rs  integers_recreating_one.rs  lib.rs  morse_code.rs  sum_by_factors.rs  sum_of_pairs.rs
